# hci-notifier

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml
hci_notifier/: main.py
src/: cli.rs  data.rs  fun.rs  main.rs
