[package]
name = "hci-notifier"
version = "0.1.0"
description = "A simple service for logging and notifying about Hercules CI job status changes"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.11", features = ["derive"] }
notify-rust = { version = "4.10.0" }
reqwest = { version = "0.11.23", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"

[profile.release]
lto = true
codegen-units = 1
strip = true
