[tool.poetry]
name = "hci-notifier"
version = "0.1.0"
description = ""
authors = ["Ilan Joselevich <personal@ilanjoselevich.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hci-notifier = "hci_notifier.main:main"
